project/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  namespace: h2o-ai
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      serviceAccountName: demo-sa
      containers:
      - name: demo
        image: nginx
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: storage
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: app-pvc
