project/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: h2o-ai
spec:
  selector:
    app: demo
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
